--- a/popup.html
+++ b/popup.html
@@ -50,6 +50,21 @@
             border-radius: 50%;
             background: #10B981;
         }
+
+        .meta {
+            margin-top: 10px;
+            font-size: 12px;
+            color: #bdbdbd;
+        }
+
+        .meta a {
+            color: #9CC5FF;
+            text-decoration: none;
+        }
+
+        .meta a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 
@@ -60,6 +75,14 @@
     </div>
     <div class="hint">Applies on chat.openai.com and chatgpt.com</div>
     <div class="status"><span id="status-dot" class="dot"></span><span id="status-text">Active</span></div>
+    <div class="meta">
+        <div>Version: <span id="version">0.0.0</span></div>
+        <div>Created by <a href="https://tristan.st" target="_blank" rel="noopener noreferrer">Tristan Stérin</a></div>
+        <div><a href="https://github.com/tcosmo/zengpt" target="_blank" rel="noopener noreferrer">View on GitHub</a>
+        </div>
+        <div><a href="https://github.com/sponsors/tcosmo" target="_blank" rel="noopener noreferrer">Sponsor on
+                GitHub</a></div>
+    </div>
     <script src="popup.js"></script>
 </body>
 
